# Course_Project

./: CMakeLists.txt  PrintVariables.cmake  main.cpp  start.cmd  start.sh
src/: LadderLayer.cpp  LadderLayer.h  PauseState.cpp  PauseState.h
src/Bonus/: Bonus.h
src/Buttom/: Buttom.cpp  Buttom.h
src/Button/: Button.cpp  Button.h
src/Enemy/: Enemy.cpp  Enemy.h
src/GUI/Health_Bar/: Health_Bar.cpp  Health_Bar.h
src/GUI/Menu/: Menu.cpp  Menu.h
src/GUI/Number_of_Coins/: Number_of_Coins.cpp
src/GUI_source/Button/: Button.cpp  Button.h
src/GUI_source/Game_interface/: Game_interface.cpp  Game_interface.h
src/GUI_source/Health_Bar/: Health_Bar.cpp  Health_Bar.h
src/GUI_source/Menu/: Menu.cpp  Menu.h
src/GUI_source/Number_of_Coins/: Number_of_Coins.cpp  Number_of_Coins.h
src/GUI_source/Primary_Menu/: Primary_Menu.cpp  Primary_Menu.h
src/Game/: Game.cpp  Game.h  GameState.cpp  GameState.h  Game_Pause.cpp  Game_Pause.h
src/Game_interface/: Game_interface.cpp  Game_interface.h
src/Health_points/: Health_points.cpp  Health_points.h
src/Level_source/Bonus/: Bonus.cpp  Bonus.h
src/Level_source/Enemy/: Enemy.cpp  Enemy.h
src/Level_source/Levels/: Levels.cpp  Levels.h
src/Levels/: Levels.cpp  Levels.h
src/MainMenu/: Main_Menu.cpp  Main_Menu.h
src/Menu/: Menu.cpp  Menu.h
src/Physics/: Physics.h
src/Player/: Player.cpp  Player.h
src/Player/Health_Points/: Health_Points.h
src/Player/Hitbox/: Hitbox.cpp  Hitbox.h
src/Player/Physics/: Physics.h
src/Player/Player/: Player.cpp  Player.h
src/Player_source/Health_Points/: Health_Points.cpp  Health_Points.h
src/Player_source/Physics/: Physics.h
src/Player_source/Player/: Player.cpp  Player.h
src/PrimaryMenu/: Primary_Menu.cpp  Primary_Menu.h
src/State/: State.h
src/Window/: Window.cpp  Window.h
src/engine/State/: State.h
src/engine/animation/: Animation.cpp  Animation.h  AnimationComponent.h
src/engine/audio/: MusicPlayer.h
src/engine/gui/: Button.cpp  Button.h  Label.cpp  Label.h  Widget.h
src/engine/parallax/: ParallaxBackground.cpp
src/engine/resource/: FontHolder.h  MapHolder.h  MusicHolder.h  ResourceHolder.h  ResourceManager.cpp  ResourceManager.h  SoundBufferHolder.h  TextureHolder.h
src/stdafx/: stdafx.h
